[🔨] Reworked inventories